fix: Live Icon spacing issue when displaying am/pm times - opted to make this one a class modifier instead of making the spacing   default since it feels that showing am/pm happens less often than   other cases

--- a/assets/css/dup/departures/row.scss
+++ b/assets/css/dup/departures/row.scss
@@ -49,6 +49,10 @@
   }
 }
 
+.departure-row__time--shortened-headsign {
+  width: 663px;
+}
+
 .departure-times-with-crowding {
   display: inline-block;
 }
